k8s/jenkins-pod-template.yaml
apiVersion: v1
kind: Pod
spec:
  serviceAccountName: jenkins-sa
  securityContext:
    fsGroup: 1000
  nodeSelector:
    kubernetes.io/arch: ${NODE_ARCH}
  containers:
    - name: jnlp
      image: jenkins/inbound-agent:3261.v9c670a_4748a_9-1
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      resources:
        requests:
          memory: "512Mi"
          cpu: "500m"
        limits:
          memory: "2048Mi"
          cpu: "1000m"
      volumeMounts:
        - name: shared-workspace
          mountPath: /home/jenkins/agent
    - name: kaniko
      image: gcr.io/kaniko-project/executor:debug
      securityContext:
        runAsUser: 0
        privileged: true
      imagePullPolicy: Always
      command:
        - /busybox/cat
      tty: true
      resources:
        requests:
          memory: "1024Mi"
          cpu: "500m"
        limits:
          memory: "2048Mi"
          cpu: "1000m"
      volumeMounts:
        - name: docker-config
          mountPath: /kaniko/.docker
        - name: shared-workspace
          mountPath: /home/jenkins/agent
    - name: kubectl
      image: bitnami/kubectl:1.30.4
      command:
        - cat
      tty: true
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      volumeMounts:
        - name: shared-workspace
          mountPath: /home/jenkins/agent
  volumes:
    - name: docker-config
      secret:
        secretName: docker-credentials
        items:
          - key: .dockerconfigjson
            path: config.json
    - name: shared-workspace
      emptyDir: {}
